<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Azul1"
        android:padding="5dp"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/tvTitulo" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16dp"
        android:text="@string/tvNombre" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/etNombre" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tvApellido" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/etApellido" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tvDireccion" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/etDireccion" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tvTelefono" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/etTelefono" />

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:backgroundTint="@color/Azul1"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btnProductos" />
</LinearLayout>